Style: change text color to black

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 .booking-form {
     padding: 10px;
     border: 1px solid #ababab;
-    color: #9b9a9a;
+    color: #000000;
     box-shadow: -2px 2px 5px #d3d3d3,
                 2px 2px 5px #d3d3d3;
     font-family: 'M PLUS Rounded 1c', sans-serif;
